[gd_scene load_steps=13 format=2]

[ext_resource path="res://asset/Gold Coin/04.png" type="Texture" id=1]
[ext_resource path="res://asset/Gold Coin/03.png" type="Texture" id=2]
[ext_resource path="res://asset/Gold Coin/01.png" type="Texture" id=3]
[ext_resource path="res://asset/Gold Coin/02.png" type="Texture" id=4]
[ext_resource path="res://asset/Coin Effect/03.png" type="Texture" id=5]
[ext_resource path="res://asset/Coin Effect/01.png" type="Texture" id=6]
[ext_resource path="res://asset/Coin Effect/02.png" type="Texture" id=7]
[ext_resource path="res://asset/sound/coinsound.mp3" type="AudioStream" id=8]
[ext_resource path="res://scripts/coin.gd" type="Script" id=9]

[sub_resource type="Animation" id=1]
resource_name = "idel"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 3 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "join"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 5 ) ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 5.5, 5.5 )

[node name="coin" type="Area2D"]
script = ExtResource( 9 )

[node name="BGCOIN" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -9.0

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idel"
anims/idel = SubResource( 1 )
anims/join = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_coin_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
